adding sub directoy support, get and create endpoint
