# backend/endoscope/endoscope-output/src/main/java/org/example/endoscope/output/dbo/DirectoryEntity.java
@@ -5,6 +5,8 @@ import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
 import jakarta.persistence.Table;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -26,5 +28,9 @@ public class DirectoryEntity {
 
     @Column(name = "directory_name")
     private String directoryName;
+
+    @ManyToOne
+    @JoinColumn(name = "parent_directory_id")
+    private DirectoryEntity parentDirectory;
 
 }
